quorum/test/tests/TypeChecker/Pass/PrimitiveTextGetValue.quorum
class Main
    action Main
        text t = "5"
        print t:GetValue()
    end
end