quorum/test/tests/TypeChecker/Fail/ImpAssignTextNumObjWrapped.quorum
class main
    action main
        Number num
        num:setValue(7.5)
        text t = num
    end
end